<?php

use Illuminate\Support\Facades\Schema;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;

class CreateElementoConfiguracionsTable extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('elemento_configuracion', function (Blueprint $table) {
            $table->increments('Id');
            $table->string('Codigo', 20);
            $table->string('Nombre', 200);
            $table->integer('FaseId')->unsigned();
            $table->foreign('FaseId')->references('Id')->on('fase');
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('elemento_configuracion');
    }
}
